# SDVM-Action-Preview

./: LICENSE  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: action_bug_report.yml  adapter_request.yml  documentation_feedback.yml  product_preview_feedback.yml  report_quality_feedback.yml
.github/workflows/: sdvm-action-self-test.yml
docs/: ACTION_USAGE.md  MARKETPLACE_LISTING_COPY_V0_1.md  RELEASE_NOTES_PUBLIC_V0_1.md  RELEASE_NOTES_V0_2.md
docs/demo/: FRIENDLY_DEMO_REPORT_DESIGN_V0_1.md  README.md  SDVM_WALKTHROUGH_DEMO_DESIGN_V0_1.md  friendly_sample_report.html  friendly_sample_report.json  friendly_sample_report.md  sdvm_walkthrough_demo.html  sdvm_walkthrough_demo.md
docs/demo/showroom/: README.md  index.html  showroom.css  showroom_report.css
docs/demo/showroom/handoff_ambiguity/: README.md  delta.md  post.md  pre.md  report.html  summary.html
docs/demo/showroom/late_checkpoint/: README.md  delta.md  post.md  pre.md  report.html  summary.html
docs/demo/showroom/reviewer_loop/: README.md  delta.md  post.md  pre.md  report.html  summary.html
docs/demo/showroom/tier3_enriched_handoff/: post.md  (+4 more)
examples/github_action_workflow/: README.md  sdvm-preview-example.yml
examples/synthetic/: README.md
examples/synthetic/healthy/: canonical.jsonl
examples/synthetic/partial_evidence/: canonical.jsonl
examples/synthetic/pre_post_delta_skeleton/: canonical.jsonl
sdvm_action_preview/: __init__.py  cli.py  evidence_validator.py  preview_report.py  synthetic_examples.py
tests/: test_public_safe_action_preview.py
